--- a/about.html
+++ b/about.html
@@ -3,11 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Learn about Astra Biocare Pvt Ltd, our mission and values." />
+  <meta name="description" content="Learn about Astra Biocare Pvt Ltd, our mission, values, and commitment to delivering science-first pharmaceutical solutions." />
   <title>Astra Biocare Pvt Ltd - About Us</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-p+1JxS8EU1RcUnnqgKTTDYXYBvCZUc5JSpSXZLF645xvLZHbiRL+CRceZ9UnB9Z9GjK6xwHy3v4sHtQ+Dx2Y/Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-p+1JxS8EU1RcUnnqgKTTDYXYBvCZUc5JSpSXZLF645xvLZHbiRL+CRceZ9UnB9Z9GjK6xwHy3v4sHtQ+Dx2Y/Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <script defer src="script.js"></script>
+  <script defer src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -36,31 +41,190 @@
     </div>
   </header>
 
-  <main class="container">
-    <section>
-      <h2>About Astra Biocare</h2>
-      <p>
-        Astra Biocare Pvt Ltd is a cutting-edge pharmaceutical company founded with a mission to bring affordable, high-quality, and innovative healthcare solutions to everyone.
-      </p>
-      <p>
-        Our team of scientists, researchers, and professionals work tirelessly to ensure our products are safe, effective, and accessible. From product development to ethical marketing, every step reflects our values of integrity, transparency, and excellence.
-      </p>
+  <main>
+    <section class="hero hero-text-only" data-aos="fade-up">
+      <div class="container">
+        <div class="section-heading">
+          <p class="eyebrow">About Astra Biocare</p>
+          <h2>Empowering health through science-first pharmaceutical innovation</h2>
+          <p>
+            Astra Biocare Pvt Ltd is a cutting-edge pharmaceutical company dedicated to bringing affordable, high-quality, and innovative healthcare solutions to patients across India. Founded with a mission to bridge the gap between advanced medical science and accessible patient care, we specialize in women's wellness, intimate care, respiratory health, and specialty therapeutics.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="product-showcase" data-aos="fade-up">
+      <div class="container">
+        <div class="section-heading">
+          <p class="eyebrow">Our Mission & Vision</p>
+          <h2>Building trust through transparency and excellence</h2>
+        </div>
+        <div class="brand-grid">
+          <article>
+            <h3>Our Mission</h3>
+            <p>
+              To deliver science-first pharmaceutical formulations that are safe, effective, and accessible to every patient. We combine rigorous research, WHO-GMP certified manufacturing, and transparent communication to ensure healthcare professionals and patients can make informed decisions with confidence.
+            </p>
+          </article>
+          <article>
+            <h3>Our Vision</h3>
+            <p>
+              To become India's most trusted pharmaceutical partner by setting new standards in product quality, ingredient transparency, and patient-centric innovation. We envision a healthcare ecosystem where every prescription is backed by complete composition disclosure and traceable sourcing.
+            </p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section class="product-section" data-aos="fade-up">
+      <div class="container">
+        <div class="section-heading">
+          <p class="eyebrow">Core Values</p>
+          <h2>What drives us forward</h2>
+        </div>
+        <div class="brand-grid">
+          <article>
+            <div class="section-heading compact">
+              <h3><i class="fa-solid fa-flask"></i> Science-First Approach</h3>
+            </div>
+            <p>
+              Every formulation is backed by clinical evidence and pharmaceutical best practices. We prioritize active ingredients with proven bioavailability and therapeutic efficacy.
+            </p>
+          </article>
+          <article>
+            <div class="section-heading compact">
+              <h3><i class="fa-solid fa-eye"></i> Complete Transparency</h3>
+            </div>
+            <p>
+              We disclose full ingredient profiles, dosage forms, and pack sizes for every SKU. No hidden components, no marketing fluff—just honest, detailed composition data.
+            </p>
+          </article>
+          <article>
+            <div class="section-heading compact">
+              <h3><i class="fa-solid fa-shield-halved"></i> Quality Assurance</h3>
+            </div>
+            <p>
+              All products are manufactured by WHO-GMP certified partners with serialized packaging for traceability and anti-counterfeit protection. Quality is non-negotiable.
+            </p>
+          </article>
+          <article>
+            <div class="section-heading compact">
+              <h3><i class="fa-solid fa-heart"></i> Patient-Centric Design</h3>
+            </div>
+            <p>
+              From pack sizes that improve compliance to formulations that minimize side effects, every decision prioritizes patient outcomes and long-term wellness.
+            </p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section class="brand-proof" data-aos="fade-up">
+      <div class="container brand-grid">
+        <article>
+          <h3>Quality Commitment</h3>
+          <p>Our commitment to quality extends across every stage of the pharmaceutical lifecycle:</p>
+          <ul>
+            <li><strong>Rigorous R&D:</strong> Evidence-based formulation development with focus on bioavailability and patient safety</li>
+            <li><strong>WHO-GMP Manufacturing:</strong> Partnering only with certified facilities that meet international quality standards</li>
+            <li><strong>Serialized Packaging:</strong> Every pack includes unique identifiers for traceability and counterfeit prevention</li>
+            <li><strong>Composition Disclosure:</strong> Full ingredient transparency on every product label and marketing material</li>
+            <li><strong>Post-Market Surveillance:</strong> Continuous monitoring and feedback integration to improve product efficacy</li>
+          </ul>
+        </article>
+        <article>
+          <h3>Our Approach</h3>
+          <p>What sets Astra Biocare apart in the pharmaceutical landscape:</p>
+          <ul>
+            <li><strong>Specialty Focus:</strong> Deep expertise in women's wellness, intimate care, and respiratory therapeutics</li>
+            <li><strong>Transparent Sourcing:</strong> Traceable supply chains with documented ingredient origins and quality certificates</li>
+            <li><strong>Pharmacist Trust:</strong> Pack sizes and formulations designed in consultation with dispensing professionals</li>
+            <li><strong>Omni-Channel Access:</strong> Available through leading e-commerce platforms and traditional pharmacy networks</li>
+            <li><strong>Ethical Marketing:</strong> Evidence-based claims with no misleading health promises or unsubstantiated benefits</li>
+          </ul>
+        </article>
+      </div>
+    </section>
+
+    <section class="product-section" data-aos="fade-up">
+      <div class="container">
+        <div class="section-heading">
+          <p class="eyebrow">By The Numbers</p>
+          <h2>Our Impact in Healthcare</h2>
+        </div>
+        <div class="hero-stats">
+          <article>
+            <strong>35+</strong>
+            <span>Specialized SKUs across therapeutic categories</span>
+          </article>
+          <article>
+            <strong>1200+</strong>
+            <span>Clinics and pharmacies stocking Astra Biocare products</span>
+          </article>
+          <article>
+            <strong>Pan-India</strong>
+            <span>Express delivery network via Amazon & Flipkart</span>
+          </article>
+          <article>
+            <strong>WHO-GMP</strong>
+            <span>Certified manufacturing partners ensuring quality</span>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section class="contact-preview" data-aos="fade-up">
+      <div class="container contact-card">
+        <div>
+          <p class="eyebrow">Partner with us</p>
+          <h2>Let's collaborate for better healthcare</h2>
+          <p>Whether you're a healthcare professional, distributor, or institutional buyer, we're here to support your needs with transparent pricing, reliable supply chains, and expert product guidance.</p>
+        </div>
+        <a href="contact.html" class="btn-primary">Get in touch</a>
+      </div>
     </section>
   </main>
 
-  <footer class="site-footer">
-    <div class="container">
-      <p>&copy; 2025 Astra Biocare Pvt Ltd. All rights reserved.</p>
-      <address>
-        Registered Office: #16, 2nd cross, Aruna Building, Somasundrapalya, Bangalore, Karnataka - 560102.
-      </address>
-      <ul class="social-links">
-        <li><a href="https://www.facebook.com/astrabiocare/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a></li>
-        <li><a href="#" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a></li>
-        <li><a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
-        <li><a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a></li>
-      </ul>
+  <footer class="site-footer" data-aos="fade-up">
+    <div class="container footer-grid">
+      <div>
+        <img src="img/company_logo.png" alt="Astra Biocare Logo" class="footer-logo" />
+        <p>&copy; 2025 Astra Biocare Pvt Ltd. All rights reserved.</p>
+        <address>
+          Registered Office: #16, 2nd cross, Aruna Building, Somasundrapalya, Bangalore, Karnataka - 560102.
+        </address>
+      </div>
+      <div>
+        <p class="eyebrow">Follow us</p>
+        <ul class="social-links">
+          <li><a href="https://www.facebook.com/astrabiocare/" target="_blank" rel="noopener" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+          <li><a href="#" target="_blank" rel="noopener" aria-label="X (Twitter)"><i class="fab fa-x-twitter"></i></a></li>
+          <li><a href="#" target="_blank" rel="noopener" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a></li>
+          <li><a href="#" target="_blank" rel="noopener" aria-label="YouTube"><i class="fab fa-youtube"></i></a></li>
+        </ul>
+      </div>
+      <div>
+        <p class="eyebrow">Shop online</p>
+        <div class="store-grid compact">
+          <a href="https://www.amazon.in/s?k=Astra+Biocare" target="_blank" rel="noopener" class="store-card">
+            <i class="fa-brands fa-amazon"></i>
+            <span>Amazon</span>
+          </a>
+          <a href="https://www.flipkart.com/search?q=astra+biocare" target="_blank" rel="noopener" class="store-card">
+            <i class="fa-solid fa-bag-shopping"></i>
+            <span>Flipkart</span>
+          </a>
+        </div>
+      </div>
     </div>
   </footer>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      if (window.AOS) {
+        AOS.init();
+      }
+    });
+  </script>
 </body>
 </html>
