--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Contact Astra Biocare Pvt Ltd for product inquiries and support." />
+  <meta name="description" content="Contact Astra Biocare Pvt Ltd for product inquiries, distributor partnerships, and customer support." />
   <title>Astra Biocare Pvt Ltd - Contact</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-p+1JxS8EU1RcUnnqgKTTDYXYBvCZUc5JSpSXZLF645xvLZHbiRL+CRceZ9UnB9Z9GjK6xwHy3v4sHtQ+Dx2Y/Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <script defer src="script.js"></script>
+  <script defer src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -36,44 +41,159 @@
     </div>
   </header>
 
-  <main class="container">
-    <section>
-      <h2>Contact Us</h2>
-      <p>We’d love to hear from you! Please fill out the form and we’ll get in touch shortly.</p>
-      <p class="contact-links">
-        <strong>Call us:</strong>
-        <a href="tel:+918977277447" aria-label="Call Astra Biocare">+91&nbsp;89772&nbsp;77447</a><br>
-        <strong>Email:</strong>
-        <a href="mailto:info@astrabiocare.com" aria-label="Email Astra Biocare">info@astrabiocare.com</a>
-      </p>
-      <form id="contactForm">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required />
+  <main>
+    <section class="hero hero-text-only" data-aos="fade-up">
+      <div class="container">
+        <div class="section-heading">
+          <p class="eyebrow">Contact Astra Biocare</p>
+          <h2>We partner with clinicians, distributors, and caregivers nationwide</h2>
+          <p>
+            Whether you need product availability, distributor pricing, or support for a specific formulation, our response
+            team is on standby. Reach out via phone, email, or the contact form and we'll get back within one business day.
+          </p>
+        </div>
+        <div class="hero-stats">
+          <article>
+            <strong>&lt;24 hrs</strong>
+            <span>Average response time</span>
+          </article>
+          <article>
+            <strong>1200+</strong>
+            <span>Clinics supported pan-India</span>
+          </article>
+          <article>
+            <strong>3</strong>
+            <span>Dedicated support desks</span>
+          </article>
+        </div>
+      </div>
+    </section>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required />
+    <section class="product-section" data-aos="fade-up">
+      <div class="container">
+        <div class="section-heading">
+          <p class="eyebrow">Get in touch directly</p>
+          <h2>Choose the channel that works best for you</h2>
+        </div>
+        <div class="brand-grid">
+          <article>
+            <div class="section-heading compact">
+              <h3><i class="fa-solid fa-phone-volume"></i> Phone Support</h3>
+            </div>
+            <p>Speak to our customer success desk for urgent orders or product clarifications.</p>
+            <a class="text-link" href="tel:+919703262424" aria-label="Call Astra Biocare">+91&nbsp;97032&nbsp;62424</a>
+            <p class="muted">Monday – Saturday · 9:30 AM to 6:30 PM IST</p>
+          </article>
+          <article>
+            <div class="section-heading compact">
+              <h3><i class="fa-solid fa-envelope-open-text"></i> Email</h3>
+            </div>
+            <p>Share formulations of interest, distributor credentials, or escalation details.</p>
+            <a class="text-link" href="mailto:astrabiocare@gmail.com" aria-label="Email Astra Biocare">astrabiocare@gmail.com</a>
+            <p class="muted">We reply within 24 hours on business days.</p>
+          </article>
+          <article>
+            <div class="section-heading compact">
+              <h3><i class="fa-solid fa-map-location-dot"></i> Registered Office</h3>
+            </div>
+            <address>
+              #16, 2nd cross, Aruna Building,<br />
+              Somasundrapalya, Bangalore,<br />
+              Karnataka - 560102, India
+            </address>
+          </article>
+          <article>
+            <div class="section-heading compact">
+              <h3><i class="fa-solid fa-handshake-angle"></i> Partnerships</h3>
+            </div>
+            <p>For institutional supply, licensing, or co-branding opportunities, schedule a call with our business desk.</p>
+            <a class="btn-outline" href="mailto:astrabiocare@gmail.com?subject=Partnership%20Inquiry">Request a callback</a>
+          </article>
+        </div>
+      </div>
+    </section>
 
-        <label for="message">Message:</label>
-        <textarea id="message" name="message" rows="5" required></textarea>
+    <section class="product-section contact-section" data-aos="fade-up">
+      <div class="container">
+        <div class="section-heading">
+          <p class="eyebrow">Send us a message</p>
+          <h2>We’ll route your request to the right specialist</h2>
+          <p>Fill in the form with as much context as possible—SKU name, pack size, and order volume help us respond faster.</p>
+        </div>
+        <div class="contact-card">
+          <form id="contactForm" action="https://formsubmit.co/astrabiocare@gmail.com" method="POST" class="contact-form">
+            <input type="hidden" name="_subject" value="Website contact request" />
+            <input type="hidden" name="_template" value="table" />
+            <input type="hidden" name="_captcha" value="false" />
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" placeholder="Dr. Aditi Rao" required />
 
-        <input type="submit" value="Send Message" />
-      </form>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="you@example.com" required />
+
+            <label for="message">Message</label>
+            <textarea id="message" name="message" rows="5" placeholder="Share your enquiry, order requirements, or support ticket details." required></textarea>
+
+            <div class="form-footer">
+              <small>By submitting, you agree to be contacted by the Astra Biocare team regarding your enquiry.</small>
+              <input type="submit" value="Send Message" class="btn-primary" />
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <section class="contact-preview" data-aos="fade-up">
+      <div class="container contact-card">
+        <div>
+          <p class="eyebrow">Need distributor pricing?</p>
+          <h2>Let’s build healthier communities together</h2>
+          <p>We support hospitals, specialty clinics, retail pharmacies, and digital health platforms with transparent pricing and reliable supply chains.</p>
+        </div>
+        <a href="mailto:astrabiocare@gmail.com?subject=Distributor%20Request" class="btn-primary">Email our business desk</a>
+      </div>
     </section>
   </main>
 
-  <footer class="site-footer">
-    <div class="container">
-      <p>&copy; 2025 Astra Biocare Pvt Ltd. All rights reserved.</p>
-      <address>
-        Registered Office: #16, 2nd cross, Aruna Building, Somasundrapalya, Bangalore, Karnataka - 560102.
-      </address>
-      <ul class="social-links">
-        <li><a href="https://www.facebook.com/astrabiocare/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a></li>
-        <li><a href="#" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a></li>
-        <li><a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
-        <li><a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a></li>
-      </ul>
+  <footer class="site-footer" data-aos="fade-up">
+    <div class="container footer-grid">
+      <div>
+        <img src="img/company_logo.png" alt="Astra Biocare Logo" class="footer-logo" />
+        <p>&copy; 2025 Astra Biocare Pvt Ltd. All rights reserved.</p>
+        <address>
+          Registered Office: #16, 2nd cross, Aruna Building, Somasundrapalya, Bangalore, Karnataka - 560102.
+        </address>
+      </div>
+      <div>
+        <p class="eyebrow">Follow us</p>
+        <ul class="social-links">
+          <li><a href="https://www.facebook.com/astrabiocare/" target="_blank" rel="noopener" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+          <li><a href="#" target="_blank" rel="noopener" aria-label="X (Twitter)"><i class="fab fa-x-twitter"></i></a></li>
+          <li><a href="#" target="_blank" rel="noopener" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a></li>
+          <li><a href="#" target="_blank" rel="noopener" aria-label="YouTube"><i class="fab fa-youtube"></i></a></li>
+        </ul>
+      </div>
+      <div>
+        <p class="eyebrow">Shop online</p>
+        <div class="store-grid compact">
+          <a href="https://www.amazon.in/s?k=Astra+Biocare" target="_blank" rel="noopener" class="store-card">
+            <i class="fa-brands fa-amazon"></i>
+            <span>Amazon</span>
+          </a>
+          <a href="https://www.flipkart.com/search?q=astra+biocare" target="_blank" rel="noopener" class="store-card">
+            <i class="fa-solid fa-bag-shopping"></i>
+            <span>Flipkart</span>
+          </a>
+        </div>
+      </div>
     </div>
   </footer>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      if (window.AOS) {
+        AOS.init();
+      }
+    });
+  </script>
 </body>
 </html>
