--- a/index.html
+++ b/index.html
@@ -22,21 +22,22 @@
       <a href="index.html" class="logo">
         <img src="img/company_logo.png" alt="Astra Biocare Logo" />
         <div>
-          <p class="eyebrow">Astra Biocare Pvt Ltd</p>
+          <!-- <p class="eyebrow">Astra Biocare Pvt Ltd</p> -->
           <h1>Astra Biocare</h1>
         </div>
       </a>
       <nav>
         <ul class="nav-list">
           <li><a href="#home">Home</a></li>
-          <li><a href="#spotlight">Products</a></li>
+          <li><a href="products/products.html">Products</a></li>
+          <!-- <li><a href="#spotlight">Products</a></li> -->
           <li><a href="about.html">About Us</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <div class="header-cta">
-        <a class="header-store" href="https://www.amazon.in/s?k=Astra+Biocare" target="_blank" rel="noopener">Amazon</a>
-        <a class="header-store" href="https://www.flipkart.com/search?q=astra+biocare" target="_blank" rel="noopener">Flipkart</a>
+        <!-- <a class="header-store" href="https://www.amazon.in/s?k=Astra+Biocare" target="_blank" rel="noopener">Amazon</a> -->
+        <!-- <a class="header-store" href="https://www.flipkart.com/search?q=astra+biocare" target="_blank" rel="noopener">Flipkart</a> -->
         <button id="themeBtn" aria-label="Toggle dark mode" title="Toggle dark mode">🌓</button>
       </div>
     </div>
@@ -89,7 +90,7 @@
           <a href="#women-health" class="pill" data-scroll-to="#women-health">Women's Wellness</a>
           <a href="#intimate-care" class="pill" data-scroll-to="#intimate-care">Intimate Care</a>
           <a href="#respiratory-care" class="pill" data-scroll-to="#respiratory-care">Respiratory & ENT</a>
-          <a href="#daily-nutrition" class="pill" data-scroll-to="#daily-nutrition">Daily Nutrition</a>
+          <!-- <a href="#daily-nutrition" class="pill" data-scroll-to="#daily-nutrition">Daily Nutrition</a> -->
         </div>
       </div>
     </section>
@@ -108,7 +109,7 @@
       <div class="container product-card">
         <div class="product-media">
           <img src="img/foljoy.JPG" alt="FOLJOY Tablets" />
-          <span class="pack-pill">Pack: 1 x 30 Tablets</span>
+          <span class="pack-pill">Pack: 10 x 1 x 10 Tablets</span>
         </div>
         <div class="product-content">
           <div class="section-heading compact">
@@ -211,7 +212,7 @@
       </div>
     </section>
 
-    <section class="product-section compact-grid" id="daily-nutrition" data-aos="fade-up">
+    <!-- <section class="product-section compact-grid" id="daily-nutrition" data-aos="fade-up">
       <div class="container">
         <div class="section-heading compact">
           <p class="eyebrow">Daily Nutrition Essentials</p>
@@ -265,7 +266,7 @@
           </article>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="brand-proof" data-aos="fade-up">
       <div class="container brand-grid">
@@ -305,7 +306,7 @@
       </div>
     </section>
 
-    <section class="social-feed" data-aos="fade-up">
+    <!-- <section class="social-feed" data-aos="fade-up">
       <div class="fb-page" data-href="https://www.facebook.com/astrabiocare/" data-tabs="timeline" data-width="500"
         data-height="600" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
         data-show-facepile="true">
@@ -313,7 +314,7 @@
           <a href="https://www.facebook.com/astrabiocare/">Astra Biocare</a>
         </blockquote>
       </div>
-    </section>
+    </section> -->
   </main>
 
   <div id="newsletterModal" class="modal">
@@ -340,11 +341,10 @@
       <div>
         <p class="eyebrow">Follow us</p>
         <ul class="social-links">
-          <li><a href="https://www.facebook.com/astrabiocare/" target="_blank" aria-label="Facebook"><i
-                class="fab fa-facebook-f"></i></a></li>
-          <li><a href="#" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a></li>
-          <li><a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
-          <li><a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a></li>
+          <li><a href="https://www.facebook.com/astrabiocare/" target="_blank" rel="noopener" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+          <li><a href="#" target="_blank" rel="noopener" aria-label="X (Twitter)"><i class="fab fa-x-twitter"></i></a></li>
+          <li><a href="#" target="_blank" rel="noopener" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a></li>
+          <li><a href="#" target="_blank" rel="noopener" aria-label="YouTube"><i class="fab fa-youtube"></i></a></li>
         </ul>
       </div>
       <div>
@@ -369,6 +369,6 @@
       }
     });
   </script>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0"></script>
+  <!-- <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0"></script> -->
 </body>
 </html>
