--- a/products/megamont-l.html
+++ b/products/megamont-l.html
@@ -69,7 +69,10 @@
 
     <section id="request" data-aos="fade-up">
       <h3>Request a Sample</h3>
-      <form action="https://formspree.io/f/your-id-here" method="POST">
+      <form action="https://formsubmit.co/info@astrabiocare.com" method="POST">
+        <input type="hidden" name="_subject" value="Sample request - MEGAMONT-L" />
+        <input type="hidden" name="_template" value="table" />
+        <input type="hidden" name="_captcha" value="false" />
         <label for="name">Name:</label>
         <input id="name" type="text" name="name" required />
 
@@ -91,10 +94,10 @@
         Registered Office: #16, 2nd cross, Aruna Building, Somasundrapalya, Bangalore, Karnataka - 560102.
       </address>
       <ul class="social-links">
-        <li><a href="https://www.facebook.com/astrabiocare/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a></li>
-        <li><a href="#" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a></li>
-        <li><a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
-        <li><a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a></li>
+        <li><a href="https://www.facebook.com/astrabiocare/" target="_blank" rel="noopener" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+        <li><a href="#" target="_blank" rel="noopener" aria-label="X (Twitter)"><i class="fab fa-x-twitter"></i></a></li>
+        <li><a href="#" target="_blank" rel="noopener" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a></li>
+        <li><a href="#" target="_blank" rel="noopener" aria-label="YouTube"><i class="fab fa-youtube"></i></a></li>
       </ul>
     </div>
   </footer>
