--- a/footer-demo.html
+++ b/footer-demo.html
@@ -94,10 +94,10 @@
     <div class="subtitle">Caring for Every Beginning</div>
     <button class="contact-btn">GET IN TOUCH</button>
     <ul class="social-links">
-      <li><a href="https://www.facebook.com/astrabiocare" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a></li>
-      <li><a href="#" aria-label="Twitter"><i class="fab fa-x-twitter"></i></a></li>
-      <li><a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a></li>
-      <li><a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a></li>
+      <li><a href="https://www.facebook.com/astrabiocare/" target="_blank" rel="noopener" aria-label="Facebook"><img src="img/facebook.png" alt="Facebook" class="social-icon"/></a></li>
+      <li><a href="#" target="_blank" rel="noopener" aria-label="X (Twitter)"><img src="img/twitter.png" alt="X (Twitter)" class="social-icon"/></a></li>
+      <li><a href="#" target="_blank" rel="noopener" aria-label="LinkedIn"><img src="img/linkedin.png" alt="LinkedIn" class="social-icon"/></a></li>
+      <li><a href="#" target="_blank" rel="noopener" aria-label="YouTube"><img src="img/youtube.png" alt="YouTube" class="social-icon"/></a></li>
     </ul>
   </footer>
 </body>
