--- a/products/super-hb.html
+++ b/products/super-hb.html
@@ -55,10 +55,10 @@
         Registered Office: #16, 2nd cross, Aruna Building, Somasundrapalya, Bangalore, Karnataka - 560102.
       </address>
       <ul class="social-links">
-        <li><a href="https://www.facebook.com/astrabiocare/" target="_blank" rel="noopener" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a></li>
-        <li><a href="#" target="_blank" rel="noopener" aria-label="X (Twitter)"><i class="fab fa-x-twitter"></i></a></li>
-        <li><a href="#" target="_blank" rel="noopener" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a></li>
-        <li><a href="#" target="_blank" rel="noopener" aria-label="YouTube"><i class="fab fa-youtube"></i></a></li>
+        <li><a href="https://www.facebook.com/astrabiocare/" target="_blank" rel="noopener" aria-label="Facebook"><img src="../img/facebook.png" alt="Facebook" class="social-icon"/></a></li>
+        <li><a href="#" target="_blank" rel="noopener" aria-label="X (Twitter)"><img src="../img/twitter.png" alt="X (Twitter)" class="social-icon"/></a></li>
+        <li><a href="#" target="_blank" rel="noopener" aria-label="LinkedIn"><img src="../img/linkedin.png" alt="LinkedIn" class="social-icon"/></a></li>
+        <li><a href="#" target="_blank" rel="noopener" aria-label="YouTube"><img src="../img/youtube.png" alt="YouTube" class="social-icon"/></a></li>
       </ul>
     </div>
   </footer>
