--- a/products/products.html
+++ b/products/products.html
@@ -94,7 +94,7 @@
           <article class="product-card">
             <div class="product-media">
               <img src="../img/foljoy.JPG" alt="FOLJOY Tablets" />
-              <span class="pack-pill">Pack: 10 x 1 x 10 Tablets</span>
+              <span class="pack-pill">Pack: 1 x 10 Tablets</span>
             </div>
             <div class="product-content">
               <div class="section-heading compact">
@@ -136,7 +136,7 @@
           <article class="product-card">
             <div class="product-media">
               <img src="../img/super-hb.JPG" alt="SUPER-HB Capsules" />
-              <span class="pack-pill">Pack: 3 x 10 Capsules</span>
+              <span class="pack-pill">Pack: 1 x 10 Tablets</span>
             </div>
             <div class="product-content">
               <div class="section-heading compact">
@@ -168,11 +168,11 @@
           <article class="product-card">
             <div class="product-media">
               <img src="../img/clean-v7.JPG" alt="CLEAN-V7 Intimate Wash" />
-              <span class="pack-pill">Pack: 100 ml bottle</span>
+              <span class="pack-pill">Pack: 1 x 7 Tablets</span>
             </div>
             <div class="product-content">
               <div class="section-heading compact">
-                <h3>CLEAN-V7 Probiotic Intimate Wash</h3>
+                <h3>CLEAN-V7 Probiotic </h3>
                 <p class="muted">Restorative cleanse for recurrent infections</p>
               </div>
               <ul>
@@ -189,11 +189,11 @@
           <article class="product-card">
             <div class="product-media">
               <img src="../img/clean-v3.JPG" alt="CLEAN-V3 Foam" />
-              <span class="pack-pill">Pack: 100 ml foaming bottle</span>
+              <span class="pack-pill">Pack: 1 x 3 Tablets</span>
             </div>
             <div class="product-content">
               <div class="section-heading compact">
-                <h3>CLEAN-V3 Daily Foam Wash</h3>
+                <h3>CLEAN-V3 </h3>
                 <p class="muted">Everyday odour control for teens & athletes</p>
               </div>
               <ul>
@@ -210,7 +210,7 @@
           <article class="product-card">
             <div class="product-media">
               <img src="../img/supergest-sr.jpg" alt="SUPERGEST-SR Tablets" />
-              <span class="pack-pill">Pack: 3 x 10 Tablets</span>
+              <span class="pack-pill">Pack: 1 x 10 Tablets</span>
             </div>
             <div class="product-content">
               <div class="section-heading compact">
@@ -242,7 +242,7 @@
           <article class="product-card">
             <div class="product-media">
               <img src="../img/snoril-lx.JPG" alt="SNORIL-LX Tablets" />
-              <span class="pack-pill">Pack: 3 x 10 Tablets</span>
+              <span class="pack-pill">Pack: 100 ml bottle</span>
             </div>
             <div class="product-content">
               <div class="section-heading compact">
@@ -263,7 +263,7 @@
           <article class="product-card">
             <div class="product-media">
               <img src="../img/snoril-d.jpeg" alt="SNORIL-D Tablets" />
-              <span class="pack-pill">Pack: 3 x 10 Tablets</span>
+              <span class="pack-pill">Pack: 100 ml bottle</span>
             </div>
             <div class="product-content">
               <div class="section-heading compact">
@@ -316,7 +316,7 @@
           <article class="product-card">
             <div class="product-media">
               <img src="../img/esokare-d.jpeg" alt="ESOKARE-D Capsules" />
-              <span class="pack-pill">Pack: 3 x 10 Capsules</span>
+              <span class="pack-pill">Pack: 1 x 10 Capsules</span>
             </div>
             <div class="product-content">
               <div class="section-heading compact">
@@ -337,7 +337,7 @@
           <article class="product-card">
             <div class="product-media">
               <img src="../img/d3-nine+.JPG" alt="D3-NINE+ Sachets" />
-              <span class="pack-pill">Pack: 1 x 4 Sachets</span>
+              <span class="pack-pill">Pack: 15 ml bottle</span>
             </div>
             <div class="product-content">
               <div class="section-heading compact">
@@ -358,7 +358,7 @@
           <article class="product-card">
             <div class="product-media">
               <img src="../img/d3-nine.JPG" alt="D3-NINE Softgels" />
-              <span class="pack-pill">Pack: 1 x 15 Softgels</span>
+              <span class="pack-pill">Pack: 30 ml bottle</span>
             </div>
             <div class="product-content">
               <div class="section-heading compact">
@@ -390,7 +390,7 @@
           <article class="product-card">
             <div class="product-media">
               <img src="../img/vitotop.JPG" alt="VITOTOP Tablets" />
-              <span class="pack-pill">Pack: 3 x 10 Tablets</span>
+              <span class="pack-pill">Pack: 30 ml bottle</span>
             </div>
             <div class="product-content">
               <div class="section-heading compact">
@@ -506,7 +506,7 @@
           <article class="product-card">
             <div class="product-media">
               <img src="../img/setmol-mds.jpeg" alt="SETMOL-MDS Tablets" />
-              <span class="pack-pill">Pack: 1 x 15 Tablets</span>
+              <span class="pack-pill">Pack: 1 x 10 Tablets</span>
             </div>
             <div class="product-content">
               <div class="section-heading compact">
@@ -611,4 +611,5 @@
   </script>
 </body>
 </html>
+
 
