Update composition list in index.html

--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
           <div class="composition">
             <h4>Key composition per tablet</h4>
             <ul>
-              <li><strong>Quatrefolic® (5-MTHF)</strong> – 1 mg</li>
-              <li><strong>Methylcobalamin</strong> – 1500 mcg</li>
-              <li><strong>Pyridoxal-5-Phosphate</strong> – 25 mg</li>
-              <li><strong>Docosahexaenoic Acid (DHA)</strong> – 200 mg</li>
+              <li><strong> Biotin </strong> – 5 mg</li>
+              <li><strong> L-Methylfolate calcium </strong> – 5 mg</li>
+              <li><strong> Mecobalamin </strong> – 1500 mcg</li>
+              <li><strong> pyridoxal 5 phosphate </strong> – 3 mg</li>
             </ul>
           </div>
           <div class="cta-wrap">
@@ -159,10 +159,9 @@
           <div class="composition">
             <h4>Hero ingredients</h4>
             <ul>
-              <li><strong>Lactic Acid</strong> – maintains optimal pH 3.5</li>
-              <li><strong>Tea Tree Oil</strong> – antifungal shield</li>
-              <li><strong>Aloe Vera & Chamomile</strong> – calming moisturizers</li>
-              <li><strong>Prebiotic Oligosaccharides</strong> – support healthy flora</li>
+              <li><strong> Clindamycin </strong> – 100mg </li>
+              <li><strong> Clotrimazole </strong> – 100mg </li>
+              <li><strong> Tinidazole </strong> – 100mg </li>
             </ul>
           </div>
           <div class="cta-wrap">
@@ -195,9 +194,9 @@
           <div class="composition">
             <h4>Composition per tablet</h4>
             <ul>
-              <li><strong>Levocetirizine Dihydrochloride</strong> – 5 mg</li>
-              <li><strong>Montelukast Sodium</strong> – 10 mg</li>
-              <li><strong>Folic Acid & Zinc Blend</strong> – mucosal support</li>
+              <li><strong> Levosalbutamol </strong> – 1 mg</li>
+              <li><strong> Ambroxol </strong> – 30 mg</li>
+              <li><strong> Guaiphenesin </strong> – 50mg </li>
             </ul>
           </div>
           <div class="cta-wrap">
